Fix remove button align remove button and make sure it works

--- a/style.css
+++ b/style.css
@@ -65,7 +65,8 @@ fieldset {
     gap: 20px;
 }
 
-.book{
+.book{ 
+    border: 1px solid black;
     width: minmax(min-content, 250px);
     height: 250px;
     background-color: #9F84BD;
@@ -76,6 +77,7 @@ fieldset {
     padding: 20px;
     color: white;
 }
+
 .title{
     font-weight: bold;
     font-size: 24px;
@@ -101,6 +103,7 @@ fieldset {
     height: 30px;
     width: 30px;
     border: none;
+    justify-self: end;
 }
 .book div {
     display: flex;
